20260305.2336 search.html -> added more cards. styles.css -> fixed flex vertical extend on cards. forms.css -> fixed first fieldset horizontal alignment.

--- a/styles/forms.css
+++ b/styles/forms.css
@@ -8,6 +8,14 @@
         flex-direction: column;
         margin-bottom: var(--mp);
     }
+
+    .pet-fieldset {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: var(--mp);
+        align-items: baseline ;
+        justify-content: space-evenly;
+    }
 }
 
 .buttons {
